[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.65"
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
dotenvy = "0.15.6"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
